--- a/shop/src/app/app.component.html
+++ b/shop/src/app/app.component.html
@@ -1,3 +1,6 @@
+<app-product-list></app-product-list>
+<app-cart></app-cart>
+
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
