--- a/src/app/products/components/product-list/product-list.component.html
+++ b/src/app/products/components/product-list/product-list.component.html
@@ -1,6 +1,3 @@
 
-<div>
-    <app-product *ngFor="let product of products">
-      [product] = product
-    </app-product>
-</div>
+    <app-product *ngFor="let product of products"
+      [product] = "product" (bougth) = "onBuy($event)"></app-product>
